--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-
-# Created by https://www.toptal.com/developers/gitignore/api/flask,python,intellij+all
-# Edit at https://www.toptal.com/developers/gitignore?templates=flask,python,intellij+all
+### Application specific ###
+config.json
 
 ### Flask ###
 instance/*
