--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -46,6 +46,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
   http: ^0.13.4
+  intl: ^0.17.0
   syncfusion_flutter_gauges: ^19.3.53
 
 # For information on the generic Dart part of this file, see the
